# mealplanner

./: .gitignore  gui_app.py  pyproject.toml  readme.md  requirements.txt
mealplanner/: __init__.py  cli.py  config.py  db.py  groceries.py  llm.py  paths.py  planner.py  validators.py
mealplanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
mealplanner/data/: pantry.json  prices_us_avg.json  recipes.json  user_prefs.json
